--- a/oxo1.html
+++ b/oxo1.html
@@ -19,20 +19,25 @@
         Click to play Noughts and Crosses.<br/>
         <div>
             <div class="row">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
             </div>
             <div class="row">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
             </div>
             <div class="row">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
+                <div onclick="place(this)"></div>
             </div>
         </div>
+        <script>
+            function place(box) {
+                alert("You Clicked Here!")
+            }
+        </script>
     </body>
 </html>
