--- a/oxo1.html
+++ b/oxo1.html
@@ -60,3 +60,8 @@
         </script>
     </body>
 </html>
+
+<!-- Things to add 
+Player recogniziton text box 
+and add text that specify winner
+-->
